--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,11 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-winston": "^4.2.0",
+    "pm2": "^5.4.2",
+    "shortid": "^2.2.16",
+    "uuid": "^10.0.0",
+    "winston": "^3.15.0"
   }
 }
